add methods for testing OngoingResponse